FIX: Some images gone too wide
Closes #177
Closes #188

--- a/less/article.less
+++ b/less/article.less
@@ -8,6 +8,7 @@
 		float: none;
 		.intrinsicwidth;
 		margin: auto;
+		max-width: 100%;
 	}
 	.introtext {
 		font-weight: bold;
